cleans up front end and adds more info

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -39,7 +39,10 @@
 .read-the-docs {
   color: #888;
 } */
-h1 {
+
+
+
+/* h1 {
   text-align: center;
 }
 .item-container {
@@ -59,4 +62,4 @@ h1 {
 img {
   height: 100px;
   width: auto;
-}
+} */
